@@ -49,6 +49,7 @@
 	- fix: rpmEVRparser was not terminating epoch correctly.
 	- fix: rpmdsSearch() end-of-loop test incorrect at end-of-array.
 	- fix: use dgettext, not gettext, everywhere.
+	- fix: install preferred color packages first (#214737, #220348).
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
